# esp32p4-ov5647

./: CMakeLists.txt  README.md  idf_component.yml  partitions_camera.csv  sdkconfig.defaults
main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  camera_init.c  camera_init.h  camera_server.c  camera_server.h  face_detect_task.cpp  face_detect_task.h  idf_component.yml
support_folder/: esp-bsp  esp-hosted  esp-video-components  esp-who  examples
support_folder/ESP32-P4-Module-DEV-KIT_Demo/Arduino/examples/HelloWorld/: HelloWorld.ino
support_folder/ESP32-P4-Module-DEV-KIT_Demo/ESP-IDF/2_Intermediate/03_wifistation/main/: idf_component.yml
support_folder/ESP32-P4-Module-DEV-KIT_Demo/ESP-IDF/2_Intermediate/05_Displaycolorbar_7inch/: CMakeLists.txt
support_folder/ESP32-P4-Module-DEV-KIT_Demo/ESP-IDF/2_Intermediate/05_Displaycolorbar_7inch/main/: idf_component.yml
support_folder/ESP32-P4-Module-DEV-KIT_Demo/ESP-IDF/3_Advanced/01_eth2ap/main/: idf_component.yml
support_folder/ESP32-P4-Module-DEV-KIT_Demo/ESP-IDF/3_Advanced/LVGL/lvgl_demo_v8/: CMakeLists.txt  sdkconfig.defaults
support_folder/ESP32-P4-Module-DEV-KIT_Demo/ESP-IDF/3_Advanced/LVGL/lvgl_demo_v8/main/: CMakeLists.txt  idf_component.yml  main.c
support_folder/ESP32-P4-Module-DEV-KIT_Demo/ESP-IDF/3_Advanced/LVGL/lvgl_demo_v9/main/: idf_component.yml  main.c
support_folder/ESP32-P4-Module-DEV-KIT_Demo/ESP-IDF/4_ExpertTechniques/esp_brookesia_phone/: sdkconfig.defaults
support_folder/ESP32-P4-Module-DEV-KIT_Demo/ESP-IDF/4_ExpertTechniques/esp_brookesia_phone/main/: idf_component.yml  main.cpp
(+11 files in other folders)
