idf_component_register(
    SRCS 
        "app_main.c"
        "camera_init.c"
        "camera_server.c"
        "face_detect_task.cpp"
    INCLUDE_DIRS 
        "."
    REQUIRES 
        esp_http_server
        esp_wifi
        esp_hosted
        nvs_flash
        esp_netif
        esp_event
        esp_timer
        mqtt
        protocol_examples_common
        esp_cam_sensor
        esp_video
        esp_driver_jpeg
        mdns
        human_face_detect
    PRIV_REQUIRES
        esp_sccb_intf
    
)
